[metadata]
name = tornado-debugger
version = attr: tornado_debugger.__version__
description = A better exception printer for Tornado web server.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.github.com/bhch/tornado-debugger
author = Bharat Chauhan
author_email = tell.bhch@gmail.com
license = BSD-3-Clause
classifiers =
    Environment :: Web Environment
    Framework :: Tornado
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
python_requires = >= 3.4
install_requires = tornado >= 5.1
packages = find:
include_package_data = true
zip_safe = false